syntax = "proto3";

package careerup.chat;

option go_package = "github.com/careerup/api-gateway/proto/careerup/chat";

message ChatMessage {
  string id = 1;
  string content = 2;
  string sender_id = 3;
  string receiver_id = 4;
  int64 timestamp = 5;
}

message SendMessageRequest {
  ChatMessage message = 1;
}

message SendMessageResponse {
  bool success = 1;
  string error = 2;
}

message StreamMessagesRequest {
  string user_id = 1;
}

service ChatService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc StreamMessages(StreamMessagesRequest) returns (stream ChatMessage);
} 